--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
             </video>
         </div>
     </div>
+    <script src="libs/jquery-3.6.0.min.js"></script>
+    <script src="libs/jquery.vide.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
